# silt

./: .gitignore  CLAUDE.md  README.md  dune-project  install.sh  justfile  silt.opam
.github/workflows/: ci.yml  release.yml
.silt/memories/: build-architecture  ci-matrix  code-management  embedding-model  musl-static-linking  skill-system  version-scheme
docs/: DESIGN.md
docs/logs/: 2026-04-02-initial-build.md
ffi/: dune  musl_compat.c  silt_embed_stubs.c  silt_ffi.ml
lib/: config.ml  dune  memory.ml  memory.mli  search.ml  search.mli  store.ml  store.mli
rust/silt_embed/: Cargo.toml  download_model.sh
rust/silt_embed/src/: lib.rs
skill/: silt.md
test/: dune  test_silt.ml
