(library
 (name silt_ffi)
 (foreign_stubs (language c) (names silt_embed_stubs musl_compat))
 (c_library_flags
  (:include c_flags.sexp)))

(rule
 (with-stdout-to c_flags.sexp
  (bash "\
    ROOT=\"$(cd %{workspace_root}/../.. && pwd -P)\"; \
    RUST_OUT=\"${ROOT}/rust/silt_embed/target\"; \
    if [ -n \"${SILT_RUST_TARGET:-}\" ] && [ -d \"${RUST_OUT}/${SILT_RUST_TARGET}/release\" ]; then \
      LIB_DIR=\"${RUST_OUT}/${SILT_RUST_TARGET}/release\"; \
    else \
      LIB_DIR=\"${RUST_OUT}/release\"; \
    fi; \
    printf '(-L%s -lsilt_embed -lpthread -lm -ldl)' \"${LIB_DIR}\"")))
