[package]
name = "silt_embed"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
safetensors = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
